--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
     "babel-jest": "29.5.0",
+    "core-js": "3.30.2",
     "eslint": "8.40.0",
     "eslint-formatter-codeframe": "7.32.1",
     "eslint-plugin-eslint-comments": "3.2.0",
@@ -46,7 +47,8 @@
     "npm-check-updates": "16.10.9",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {}
+    "regenerator-runtime": "0.13.11",
+    "typescript": "5.0.4",
+    "whatwg-fetch": "3.6.2"
+  }
 }
