--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-watch-typeahead": "2.2.2",
+    "mobx": "6.9.0",
     "npm-check-updates": "16.10.9",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
