--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,6 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm test
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
