--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "pathname:bash": "echo 'Bash pathname is'; command -v bash",
     "prepare": "run-s git:hooks:install 'pathname:bash --silent'"
   },
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "7.21.8",
     "@babel/preset-env": "7.21.5",
     "@babel/preset-typescript": "7.21.5",
@@ -48,9 +48,9 @@
     "@tsconfig/strictest": "2.0.1",
     "@types/babel__core": "7.20.0",
     "@types/jest": "29.5.1",
-    "@types/node": "20.1.0",
-    "@typescript-eslint/eslint-plugin": "5.59.2",
-    "@typescript-eslint/parser": "5.59.2",
+    "@types/node": "20.1.4",
+    "@typescript-eslint/eslint-plugin": "5.59.5",
+    "@typescript-eslint/parser": "5.59.5",
     "babel-jest": "29.5.0",
     "core-js": "3.30.2",
     "eslint": "8.40.0",
@@ -58,13 +58,13 @@
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-jest-dom": "4.0.3",
-    "eslint-plugin-testing-library": "5.10.3",
+    "eslint-plugin-testing-library": "5.11.0",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-watch-typeahead": "2.2.2",
     "mobx": "6.9.0",
-    "npm-check-updates": "16.10.9",
+    "npm-check-updates": "16.10.12",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "regenerator-runtime": "0.13.11",
