--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "regenerator-runtime": "0.13.11",
+    "test-http-client": "0.1.3",
     "typescript": "5.0.4",
     "whatwg-fetch": "3.6.2"
   }
