--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prettier": "2.8.8",
     "regenerator-runtime": "0.13.11",
     "test-http-client": "0.1.3",
+    "tsd": "0.28.1",
     "typescript": "5.0.4",
     "whatwg-fetch": "3.6.2"
   }
